# home

./: .gitconfig
BTI/CATS/: Co.agda
BTI/CATS/agda/: Co.agda
BTI/FMC1/fmchaskell/: haskell-project.cabal
BTI/FMC1/fmchaskell/app/: Main.hs
BTI/FMC1/fmchaskell/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
BTI/FMC1/fmchaskell/src/: Natslib.hs
BTI/FMC1/fmclean/nng/: nngsave.json
BTI/FMC1/fmclean/src/: ints.lean  logic.lean
BTI/FMC1/haskell-project/app/: Main.hs
BTI/FMC1/haskell-project/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
BTI/FMC1/haskell-project/src/: Natslib.hs
BTI/LP1/lp1-lista1-cpp_basico-HappyHoland/: autor.md
BTI/LP1/lp1-lista1-cpp_basico-HappyHoland/histograma/include/: function.hpp
BTI/LP1/lp1-lista1-cpp_basico-HappyHoland/histograma/src/: function.cpp  main.cpp
BTI/LP1/lp1-lista1-cpp_basico-HappyHoland/intervalos/include/: func.hpp
BTI/LP1/lp1-lista1-cpp_basico-HappyHoland/intervalos/src/: func.cpp  main.cpp
BTI/LP1/lp1-lista1-cpp_basico-HappyHoland/pessoa_e_cadastro/data_expected/: in1_OUT.txt
BTI/LP1/lp1-lista1-cpp_basico-HappyHoland/pessoa_e_cadastro/include/: database.hpp
BTI/LP1/lp1-lista1-cpp_basico-HappyHoland/pessoa_e_cadastro/src/: database.cpp  main.cpp
BTI/LP1/lp1-lista1-cpp_basico-HappyHoland/ponto_em_retangulo/include/: function.h
BTI/LP1/lp1-lista1-cpp_basico-HappyHoland/ponto_em_retangulo/src/: function.cpp  main.cpp
BTI/LP1/t01-lista-2-HappyHoland/bingo/: CMakeLists.txt
BTI/LP1/t01-lista-2-HappyHoland/bingo/include/: Jogador.hpp
BTI/LP1/t01-lista-2-HappyHoland/bingo/src/: Jogador.cpp  main.cpp
BTI/LP1/t01-lista-2-HappyHoland/casa_e_rua/: CMakeLists.txt  README.md
BTI/LP1/t01-lista-2-HappyHoland/casa_e_rua/include/: Casa.hpp  misc.hpp  rua.hpp
BTI/LP1/t01-lista-2-HappyHoland/casa_e_rua/src/: Casa.cpp  main.cpp  misc.cpp  rua.cpp
BTI/LP1/t01-lista-2-HappyHoland/matrizes_com_classe/: CMakeLists.txt
BTI/LP1/t01-lista-2-HappyHoland/matrizes_com_classe/data_expected/: in5_OUT.txt
BTI/LP1/t01-lista-2-HappyHoland/matrizes_com_classe/include/: Matriz.hpp  misc.hpp
BTI/LP1/t01-lista-2-HappyHoland/matrizes_com_classe/src/: Matriz.cpp  main.cpp  misc.cpp
BTI/LP1/t01-lista-2-HappyHoland/pessoa_e_cadastro/include/: Cadastro.hpp
BTI/LP1/trabalho-2-auto-complete-e-autocorrect-isaacmsl/: CMakeLists.txt
BTI/LP1/trabalho-2-auto-complete-e-autocorrect-isaacmsl/data/expected/: cities.txt  interface_test1.txt  interface_test2.txt  interface_test3.txt
BTI/LP1/trabalho-2-auto-complete-e-autocorrect-isaacmsl/data/tests/: autocomplete_test3.txt  autocorrect_test1.txt  autocorrect_test2.txt  autocorrect_test3.txt  database_test1.txt  database_test2.txt  database_test3.txt  database_test4.txt  interface_test2.txt  interface_test3.txt  sort_test.txt
BTI/LP1/trabalho-2-auto-complete-e-autocorrect-isaacmsl/include/: Autocomplete.hpp  Autocorrect.hpp  Database.hpp  Interface.hpp  StringUtil.hpp  leveshtein.hpp
BTI/LP1/trabalho-2-auto-complete-e-autocorrect-isaacmsl/src/: Autocomplete.cpp  Autocorrect.cpp  Database.cpp  Interface.cpp  StringUtil.cpp  leveshtein.cpp  main.cpp
BTI/LP1/trabalho-2-auto-complete-e-autocorrect-isaacmsl/tests/: autocomplete.cpp  autocorrect.cpp  database.cpp  interface.cpp  main.cpp
BTI/LP1/trabalho-2-auto-complete-e-autocorrect-isaacmsl/tests/test_manager/include/: test_manager.hpp
BTI/LP1/trabalho-2-auto-complete-e-autocorrect-isaacmsl/tests/test_manager/src/: test_manager.cpp
(+6 files in other folders)
